--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-path="/api"
+spring.jpa.properties.hibernate.jdbc.non_contextual_creation=true
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/crmiv
+spring.datasource.username=postgres
+spring.datasource.password= postgres
+spring.jpa.hibernate.ddl-auto=update
