--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,6 @@
-server.port = 8081
-server.servlet.context-path= /api
-
-spring.jpa.show-sql = false
-
 spring.jpa.properties.hibernate.jdbc.non_contextual_creation=true
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
-spring.sql.init.platform= postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url= jdbc:postgresql://localhost:5432/crmiv
+spring.datasource.username=postgres
+spring.datasource.password= postgres
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
-
